<resources>
    <string name="app_name">QuizGame</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="registration_question">New here? <u>Register!</u></string>
    <string name="confirm_hint">Confirm password</string>
    <string name="terms_and_cond">Accept terms and conditions</string>
    <string name="save">Save</string>
    <string name="alert_title">Wait…</string>
    <string name="button_ok">OK</string>
    <string name="user_not_exists">Wrong username or password, please verify or try again!</string>
    <string name="username_empty_error">Username must not be empty!</string>
    <string name="username_length_error">Length must be greater than 5!</string>
    <string name="password_empty_error">Password must not be empty!</string>
    <string name="register">Register</string>
    <string name="username_taken">Username is already taken, please insert a different one!</string>
    <string name="terms_and_conds_error">Terms and conditions mut be accepted, please accept in order to continue!</string>
    <string name="password_match_error">Passwords do not match!</string>
    <string name="premium">Premium</string>
    <string name="settings">Settings</string>
    <string name="main_screen">Hi, </string>
    <string name="power_ups_title">Power-ups</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="logout">Logout</string>
    <string name="profile_reset_password">Reset password</string>
    <string name="profile_power_ups">Power ups</string>
    <string name="profile_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="random_match">Random match</string>
    <string name="lobby">Lobby</string>
    <string name="ranking">Ranking</string>
    <string name="activate_premium">Activate premium account</string>
    <string name="card_number_hint">Card number</string>
    <string name="ccv_hint">CCV</string>
    <string name="exp_card_hint">mm/yy</string>
    <string name="btn_premium">Buy premium</string>
    <string name="card_number_alert">Card must contain 16 digits!</string>
    <string name="ccv_alert">CCV must contain 3 digits!</string>
    <string name="already_premium">You have already activated your premium account.</string>
    <string name="exp_date_alert">Expiration date must not be empty!</string>
    <string name="cancel">Cancel</string>
    <string name="default_alert">Something went wrong, please try again!</string>
    <string name="buy_power_ups">Buy power ups</string>
    <string name="power_up_sell">Sell</string>
    <string name="current_players">Current lobby players : </string>
    <string name="try_again">Try again</string>
    <string name="credit_description">Credit:</string>
    <string name="free_bonus">Free</string>
    <string name="current_credit">Current credit:</string>
    <string name="no_power_ups">Uhh…you have no power ups yet! Clicking the button below you are able to buy some !</string>
    <string name="not_enough_credit">You don\'t have enough credit!</string>
    <string name="maximum_power">You cannot have more than 3 power ups of the same type!</string>
    <string name="default_buy">You have bought</string>
    <string name="check_premium_details">Check details</string>
    <string name="time_left">Time left:</string>
    <string name="premium_details_desc1">By activating the premium account there will be free power ups to buy, there will be no ads displayed during the game and also on the main screen.</string>
    <string name="premium_details_desc2">A great advantage brought by the premium account is that when losing a game, there will be the option to sell a power up to continue a game or to pay a random amount of credit.</string>
    <string name="premium_details_desc3">The premium account will expire in 10 days. Please enjoy !</string>
    <string name="expand">Expand</string>
    <string name="days">days</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset_password_description">Please insert below your current password and the new password that you want to be set.</string>
    <string name="reset_password_current_error">Please enter your current password.</string>
    <string name="new_password_hint">New password</string>
    <string name="reset">Reset</string>
    <string name="account_password_error">Enter the correct account password.</string>
    <string name="same_password_error">Must not be as same as the current one.</string>
    <string name="successfully_password_reset">Your password has been successfully reset!</string>
    <string name="settings_feedback">Send feedback</string>
    <string name="settings_about">About</string>
    <string name="settings_terms">Terms and conditions</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_account_message">Are you sure you want to remove this account?</string>
    <string name="select_feedback_category">Please select a feedback category from below </string>
    <string name="feedback_send">Send feedback</string>
    <string name="feedback_description">Description…</string>
    <string name="category_error">You have to select a category.</string>
    <string name="empty_description_error">Description must not be empty.</string>
    <string name="length_description_error">Description must be at least 10 characters length long.</string>
    <string name="feedback_successfully_sent">Feedback successfully sent!</string>
    <string name="feedback_history">History</string>
    <string name="no_history_feedback">You didn\'t send any feedback yet :)</string>
    <string name="feedback_reviewed">Feedback was reviewed :</string>
    <string name="terms_first">By reading this you are explained how to respect our terms and conditions. QuizGame does represent a personal project that implies the
    self learning and auto knowledge.</string>
    <string name="terms_second">By using this application you help us in testing of new technologies included in this application. </string>
    <string name="accepted">Accepted!</string>
    <string name="about_first">QuizGame represent a cultural knowledge game. The main goal of this game is learning. By being challenged with questions in order to take the lead of the ranking system you will find yourself
    in the position of trying to reach the top rank.</string>
    <string name="about_second">in this game there are some interesting features implemented. As you\'ve seen above, there was something discussed about rankings.</string>
    <string name="go_rankings">Check rankings</string>
    <string name="about_third">Also, this application allows you to send feedback or report an issue whenever a problem occurs.</string>
    <string name="go_feedback">Send feedback</string>
    <string name="about_fourth">More of it, you can also edit your profile whenever you need and check your profile details.</string>
    <string name="go_profile">Check profile</string>
    <string name="about_fifth">The most important one comes now, you can buy and use power ups while playing.</string>
    <string name="go_powerups">Check power ups</string>
    <string name="error_conn_message">Wait…Try again</string>
    <string name="game_selected">Game has been selected</string>
    <string name="submit">Submit</string>
    <string name="surrender">Surrender</string>
    <string name="preparing_questions">Preparing questions…</string>
    <string name="loading_content">Loading content…</string>
    <string name="lost_game_message">It seems you\'ve lost the game</string>
    <string name="go_home">Go home</string>
    <string name="finished_game">Game has been finished!</string>
    <string name="check_answers">Check answers</string>
    <string name="may_check">You may also :</string>
    <string name="variants_option_error">Something went wrong, click here to try again. If the problem is still occurring please try again later!</string>
    <string name="points">Points:</string>
    <string name="surrender_message">Do you really want to surrender?</string>
    <string name="use">Use</string>
    <string name="no_power_ups_quiz">You do not have any power ups!</string>
    <string name="only_one_power">You are able to use only one power per question.</string>

    <string-array name="feedback_categories">
        <item>Account issues</item>
        <item>Credit</item>
        <item>Power ups</item>
        <item>Connection</item>
        <item>Personal data</item>
        <item>Usage</item>
        <item>Other</item>
    </string-array>

    <string-array name="end_game_also_options">
        <item>Check the ranking</item>
        <item>Have another match</item>
        <item>See your profile</item>
    </string-array>

</resources>
