<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".gui.about.AboutActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_about_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/about_first"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/tv_about_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/about_second"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about_first" />

            <TextView
                android:id="@+id/tv_about_rankings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_white_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/go_rankings"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/tv_about_second" />

            <TextView
                android:id="@+id/tv_about_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/about_third"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about_rankings" />

            <TextView
                android:id="@+id/tv_about_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_white_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/go_feedback"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/tv_about_third" />


            <TextView
                android:id="@+id/tv_about_fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/about_fourth"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about_feedback" />

            <TextView
                android:id="@+id/tv_about_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_white_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/go_profile"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/tv_about_fourth" />

            <TextView
                android:id="@+id/tv_about_fifth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/about_fifth"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_about_profile" />

            <TextView
                android:id="@+id/tv_about_powerups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_white_rectangle"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/go_powerups"
                android:textAlignment="center"
                android:textColor="@color/dark_green"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/tv_about_fifth" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>