<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:id="@+id/cl_main_reset_password"
    android:background="@color/background_color"
    tools:context=".gui.resetpassword.ResetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <TextView
        android:id="@+id/tv_reset_password_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/reset_password_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/round_white_rectangle"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_password_desc">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_reset_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:textColor="@color/dark_green"
            android:textColorHint="@color/dark_green"
            app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                android:id="@+id/et_reset_current_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/dark_green"
                android:textColorHint="@color/dark_green" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_reset_password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_current_error"
            android:textColor="@color/alert_red"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/til_reset_current_password" />

        <View
            android:id="@+id/reset_password_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_password_error" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_reset_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:textColor="@color/dark_green"
            android:textColorHint="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/reset_password_separator">

            <EditText
                android:id="@+id/et_reset_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/new_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/dark_green"
                android:textColorHint="@color/dark_green" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_reset_password_new_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_empty_error"
            android:textColor="@color/alert_red"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/til_reset_new_password" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_white_rectangle"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/dark_green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_reset_password" />

</android.support.constraint.ConstraintLayout>